--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-    <link rel="stylesheet" href="%sveltekit.assets%/icofont/icofont.min.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/fonts/icofont/icofont.min.css" />
 
     %sveltekit.head%
   </head>
